--- a/projects/example/project-a/src/BUILD
+++ b/projects/example/project-a/src/BUILD
@@ -1,2 +1,6 @@
-clojure_sources(name="java17",resolve="java17",sources=["**/*.clj"])
-clojure_sources(name="java21",resolve="java21",sources=["**/*.clj"])
+clojure_sources(name="java17",resolve="java17",sources=["**/*.clj"],dependencies=[
+        "//projects/example/project-b/src:clojure-java17",
+    ])
+clojure_sources(name="java21",resolve="java21",sources=["**/*.clj"],dependencies=[
+        "//projects/example/project-b/src:clojure-java21",
+    ])
