--- a/locks/jvm/java17.lock.jsonc
+++ b/locks/jvm/java17.lock.jsonc
@@ -246,6 +246,12 @@ artifact = "clojure"
 version = "1.11.0"
 packaging = "jar"
 
+[[entries.dependencies]]
+group = "org.clojure"
+artifact = "spec.alpha"
+version = "0.3.218"
+packaging = "jar"
+
 
 [entries.coord]
 group = "org.clojure"
@@ -267,6 +273,12 @@ packaging = "jar"
 group = "org.clojure"
 artifact = "clojure"
 version = "1.11.0"
+packaging = "jar"
+
+[[entries.dependencies]]
+group = "org.clojure"
+artifact = "core.specs.alpha"
+version = "0.2.62"
 packaging = "jar"
 
 
