--- a/pants-plugins/BUILD
+++ b/pants-plugins/BUILD
@@ -4,7 +4,7 @@ python_requirements(name="pants-reqs", resolve="pants-plugins", source="requirem
 
 python_requirements(name="pants-test-reqs", resolve="pants-plugins", source="test-requirements.txt")
 
-python_sources(name="pants-plugin-sources", resolve="pants-plugins", sources=["clojure_backend/**/*.py"], dependencies=[":pants", ":pants-reqs"])
+python_sources(name="pants-plugin-sources", resolve="pants-plugins", sources=["pants_backend_clojure/**/*.py"], dependencies=[":pants", ":pants-reqs"])
 
 python_sources(name="test-fixtures", resolve="pants-plugins", sources=["tests/**/clojure_test_fixtures.py"])
 
